--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Voices of Impact is a blog highlighting changemakers in Nigeria and Africa." />
+  <meta name="description" content="Impact Amplified is a blog highlighting changemakers in Nigeria and Africa." />
   <meta name="keywords" content="changemakers, Nigeria, Africa, Tony Elumelu, Norah Magero, Wanjira Mathai, Ineza Umuhoza Grace, Amara Nwuneli, impact stories" />
-  <meta name="author" content="Voices of Impact" />
-  <title>Voices of Impact | African Changemakers</title>
+  <meta name="author" content="Impact Amplified" />
+  <title>Impact Amplified | African Changemakers</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -14,8 +14,8 @@
   <header class="hero">
     <div class="overlay">
       <div class="hero-text">
-        <h1>Voices of Impact</h1>
-        <p>Celebrating changemakers shaping Africa’s future</p>
+        <h1>Impact Amplified</h1>
+        <p>Recognizing the leaders transforming Africa</p>
       </div>
     </div>
   </header>
@@ -66,7 +66,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Voices of Impact. All rights reserved.</p>
+      <p>&copy; 2025 Impact Amplified. All rights reserved.</p>
     </div>
   </footer>
 </body>
