--- a/blog1.html
+++ b/blog1.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tony Elumelu: Empowering African Entrepreneurs | Voices of Impact</title>
+  <title>Tony Elumelu: Empowering African Entrepreneurs | Impact Amplified</title>
   <meta name="description" content="Learn how Tony Elumelu is transforming entrepreneurship across Africa through his investment, mentorship, and visionary leadership." />
   <meta name="keywords" content="Tony Elumelu, African entrepreneurs, business leaders, Africa investment, mentorship, changemakers" />
-  <meta name="author" content="Voices of Impact" />
+  <meta name="author" content="Impact Amplified" />
   <link rel="stylesheet" href="blog.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1><a href="index.html" style="color: var(--brand-primary); text-decoration:none;">Voices of Impact</a></h1>
+      <h1><a href="index.html" style="color: var(--brand-primary); text-decoration:none;">Impact Amplified</a></h1>
       <nav>
         <a href="index.html">Home</a>
       </nav>
@@ -48,7 +48,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Voices of Impact. All rights reserved.</p>
+      <p>&copy; 2025 Impact Amplified. All rights reserved.</p>
     </div>
   </footer>
 </body>
